<resources>
    <string name="app_name">Login Alert</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remember">Remember me</string>
    <string name="button_login">Login</string>
    <string name="welcome">Welcome</string>
    <string name="logout">Logout</string>
    <string name="account_register1">Dont have an account?</string>
    <string name="account_register2">&#160;Sign Up!</string>
</resources>